--- a/paper/macros.tex
+++ b/paper/macros.tex
@@ -256,8 +256,8 @@
 %%%%%%%%%%%%%%%%%
 
 \newcommand{\pcong}{\sqsupseteq}
-\newcommand{\red}{\rightarrow}
-\newcommand{\reds}{\Rightarrow}
+\newcommand{\red}{\leadsto}
+\newcommand{\reds}{\red^*}
 \newcommand{\wred}{\Rightarrow}
 \newcommand{\nred}{\arrownot\red}
 \newcommand{\eqdef}{\stackrel{\smash{\textsf{\upshape\tiny def}}}=}
