--- a/paper/main.tex
+++ b/paper/main.tex
@@ -27,23 +27,22 @@
 \newunicodechar{⊗}{\ensuremath{\Ten}}
 \newunicodechar{⅋}{\ensuremath{\Par}}
 \newunicodechar{∀}{\ensuremath{\forall}}
-\newunicodechar{′}{\ensuremath{{}^\prime}}
-\newunicodechar{≡}{\ensuremath{\equiv}}
-\newunicodechar{₀}{\ensuremath{{}_0}}
-\newunicodechar{₁}{\ensuremath{{}_1}}
-\newunicodechar{₂}{\ensuremath{{}_2}}
-\newunicodechar{₃}{\ensuremath{{}_3}}
-\newunicodechar{↝}{\ensuremath{\leadsto}}
-\newunicodechar{⇒}{\ensuremath{\leadsto^*}}
-\newunicodechar{≃}{\ensuremath{\simeq}}
-\newunicodechar{Γ}{\ensuremath{\ContextC}}
-\newunicodechar{Δ}{\ensuremath{\ContextD}}
-\newunicodechar{Θ}{\ensuremath{\ContextE}}
+\newunicodechar{′}{\ensuremath{'}}
+\newunicodechar{≡}{\ensuremath\equiv}
+\newunicodechar{₀}{\ensuremath{_0}}
+\newunicodechar{₁}{\ensuremath{_1}}
+\newunicodechar{₂}{\ensuremath{_2}}
+\newunicodechar{₃}{\ensuremath{_3}}
+\newunicodechar{↝}{\ensuremath\red}
+\newunicodechar{⇒}{\ensuremath\reds}
+\newunicodechar{≃}{\ensuremath\simeq}
+\newunicodechar{Γ}{\ensuremath\ContextC}
+\newunicodechar{Δ}{\ensuremath\ContextD}
+\newunicodechar{Θ}{\ensuremath\ContextE}
 \newunicodechar{∷}{\ensuremath{{::}}}
-% \newunicodechar{×}{\ensuremath{\times}}
-\newunicodechar{∃}{\ensuremath{\exists}}
-\newunicodechar{π}{\ensuremath{\pi}}
-\newunicodechar{⊒}{\ensuremath{\pcong}}
+\newunicodechar{∃}{\ensuremath\exists}
+\newunicodechar{π}{\ensuremath\pi}
+\newunicodechar{⊒}{\ensuremath\pcong}
 
 %%%%%=============================================================================%%%%
 %%%%  Remarks: This template is provided to aid authors with the preparation
