drafted deadlock freedom

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -43,6 +43,7 @@
 \newunicodechar{∃}{\ensuremath\exists}
 \newunicodechar{π}{\ensuremath\pi}
 \newunicodechar{⊒}{\ensuremath\pcong}
+\newunicodechar{⊎}{\ensuremath\uplus}
 
 %%%%%=============================================================================%%%%
 %%%%  Remarks: This template is provided to aid authors with the preparation
