--- a/paper/calculus.tex
+++ b/paper/calculus.tex
@@ -362,18 +362,52 @@ The \emph{linearity challenge}~\citep{CarboneEtAl24} aims at formalizing two
 essential properties of well-typed processes: (1) typing is preserved by
 reductions; (2) peer endpoints are always used in complementary ways. This
 latter property is dubbed \emph{well formedness} in the text of the challenge.
-We now formulate these properties using the notation developed so far.
+In this work we also consider \emph{deadlock freedom} which follows from the
+fact that \Calculus is based on linear logic. As we will see, well formedness is
+nothing but a particular form of deadlock freedom. We now formulate these
+properties using the notation developed so far.
 
 Concerning the preservation of typing, this corresponds to the usual subject
-reduction result which is expressed thus.
+reduction result, which is expressed thus:
 
 \begin{theorem}[subject reduction]
     \label{thm:red}
     If $P \red Q$, then $\wtp{P}\Context$ implies $\wtp{Q}\Context$.
 \end{theorem}
 
-In order to formulate well formedness, we start by defining \emph{reduction
-contexts} are partial processes with a single unguarded hole $\Hole$, thus:
+In order to formulate deadlock freedom, we need to introduce some terminology
+for referring to processes that are unable to make any progress. Deadlock is not
+simply the negation of reducibility: there are irreducible processes that are
+not a deadlock because they would be able to reduce if put in a suitable
+context. For example, $\Wait\x.P$ does not reduce, and yet it is not a deadlock
+because it would be able to make progress when composed in parallel with
+$\Close\x$. In general, even a process like $\Cut\y{\Wait\y.P}{\Wait\z.Q}$ where
+$x\ne y,z$ cannot be considered a deadlock, because the prefixes $\Wait\y$ and
+$\Wait\z$ could be exposed using \SWait and possibly \SComm. Let us make all
+this more precise.
+
+We say that $P$ is a \emph{thread} if it is anything but a cut. In other words,
+a thread is either a link or a process that starts with an input/output action
+of some sort. Note that a thread may contain cuts, but these must all guarded
+underneath the topmost action prefix.
+%
+We also say that $P$ is \emph{observable} if $P \pcong Q$ for some thread $Q$.
+An observable process is a process that exposes an action on a free channel name
+and therefore can interact through that channel, if put into some appropriate
+context. We say that $P$ is \emph{reducible} if $P \red Q$ for some $Q$. A
+reducible process may perform a reduction step.
+%
+Now, a process is a \emph{deadlock} if it is neither observable nor reducible. A
+simple example of deadlock is the process $\Cut\x{\Close\x}{\Close\x}$. 
+
+\begin{theorem}[deadlock freedom]
+    \label{thm:df}
+    If $\wtp{P}\Context$, then $P$ is not a deadlock.
+\end{theorem}
+
+In order to formulate \emph{well formedness}~\cite{CarboneEtAl}, we define
+\emph{reduction contexts} as partial processes with a single unguarded hole
+$\Hole$, thus:
 \[
     \ReductionContext ::= \Hole \mid \Cut\x\ReductionContext{P} \mid \Cut\x{P}\ReductionContext
 \]
@@ -382,45 +416,21 @@ As usual, we write $\ReductionContext[P]$ for the process obtained by replacing
 the hole in $\ReductionContext$ with $P$, noting that such replacement may
 capture channel names that are bound in $\ReductionContext$ and occur free in
 $P$.
-
-Next we introduce some terminology concerning the shape of processes. We say
-that $P$ is a \emph{thread} if it is anything but a cut. In other words, a
-thread is either a link or a process that starts with an input/output action of
-some sort. Note that a thread may contain cuts, but these must all guarded
-underneath the topmost action prefix.
 %
-We also say that $P$ is \emph{observable} if $P \pcong Q$ for some thread $Q$.
-An observable process is a process that exposes an action on a free channel name
-and therefore can interact through that channel, if put into some appropriate
-reduction context. We say that $P$ is \emph{reducible} if $P \red Q$ for some
-$Q$. A reducible process may perform a reduction step.
-
 Now we observe that if $P$ and $Q$ both act on the same channel $x$ in
-complementary ways, then their parallel composition $\Cut\x{P}{Q}$ must be able
-to reduce according to one of the principal cut reductions described in
-\Cref{tab:semantics}. Therefore, an alternative (and more convenient) way of
-formulating well formedness is the following:
-
-\begin{definition}[well formedness]
-    \label{def:well-formedness}
-    We say that $P$ is \emph{well formed} if $P \pcong
-    \ReductionContext[\Cut\x{Q_1}{Q_2}]$ where both $Q_1$ and $Q_2$ are threads
-    implies that $\Cut\x{Q_1}{Q_2}$ is either observable or reducible.
-\end{definition}
-
-In general a process may be well-formed even if it is unable to reduce. For
-example, $P \eqdef \Cut\x{\Wait\y.\Close\x}{\Wait\x.\Close\z}$ is irreducible
-but also well formed, because $P \pcong
-\Wait\y.\Cut\x{\Close\x}{\Wait\x.\Close\z}$ which is observable.
+complementary ways, then their parallel composition $\Cut\x{P}{Q}$ is reducible
+according to one of the principal cut reductions described in
+\Cref{tab:semantics}. Therefore, an alternative (and more general) way of
+formulating well formedness is this:
+%
+we say that $P$ is \emph{well formed} if $P \pcong
+\ReductionContext[\Cut\x{Q_1}{Q_2}]$ implies that $\Cut\x{Q_1}{Q_2}$ is not a
+deadlock.
 
 \begin{theorem}[type safety]
     \label{thm:type-safety}
     If $\wtp{P}\Context$, then $P$ is well formed.
 \end{theorem}
 
-% \begin{theorem}[deadlock freedom]
-%     \label{thm:df}
-%     If $\wtp{P}\Context$, then $P$ is either observable or reducible.
-% \end{theorem}
-
-% safety
+Note that the properties expressed in \Cref{thm:df,thm:type-safety} are
+invariant under reductions thanks to \Cref{thm:red}.
